<resources>
    <string name="app_name">EasyPets</string>
    <string name="action_settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="result">Results</string>
    <string name="write_review">Write a review</string>
    <string name="title_grooming_uppercase">GROOMING</string>
    <string name="title_hospital_uppercase">HOSPITAL</string>
    <string name="title_hotel_uppercase">HOTEL</string>
    <string name="title_grooming" translatable="false">Grooming</string>
    <string name="title_hospital" translatable="false">Hospitals</string>
    <string name="title_hotel" translatable="false">Hotels</string>
    <string name="sort_name">Name</string>
    <string name="sort_distance">Distance</string>
    <string name="sort_price">Price</string>
    <string name="sort_popularity">Popularity</string>
    <string name="sort_price_checkup">checkup price</string>
    <string name="sort_price_vaccine">vaccine price</string>
    <string name="sort_price_operation">operation price</string>
    <string name="name_untranslated" translatable="false">name</string>
    <string name="distance_untranslated" translatable="false">Distance</string>
    <string name="popularity_untranslated" translatable="false">Popularity</string>
    <string name="hotel_price_untranslated" translatable="false">hotel_price</string>
    <string name="price_checkup_untranslated" translatable="false">checkup_price_rate</string>
    <string name="price_vaccine_untranslated" translatable="false">vaccine_price_rate</string>
    <string name="price_operation_untranslated" translatable="false">operation_price_rate</string>
    <string name="groom_price_untranslated" translatable="false">grooming_price_rate</string>
    <string name="URL" translatable="false">http://192.168.1.137/easypets/</string>
    <string name="ADD_NEW_USER_URL" translatable="false">new_user_add.php?status=0</string>
    <string name="ADD_REVIEW_URL" translatable="false">post_review.php?uid=%1$s&amp;text=%2$s</string>
    <string name="ATTEMPT_LIKE_URL" translatable="false">attempt_like.php?uid=%1$s&amp;service_id=%2$d</string>
    <string name="GET_AVAILABLE_PETS_FOR_SERVICE_URL" translatable="false">get_available_pets_for_service.php?service_id=%1$s</string>
    <string name="GET_GROOM_BY_SERVICE_ID_URL" translatable="false">get_groom_by_service_id.php?service_id=%1$s</string>
    <string name="GET_HOSPITAL_BY_SERVICE_ID_URL" translatable="false">get_hospital_by_service_id.php?service_id=%1$s</string>
    <string name="GET_HOTEL_BY_SERVICE_ID_URL" translatable="false">get_hotel_by_service_id.php?service_id=%1$s</string>
    <string name="GET_OTHERS_BY_SERVICE_ID_URL" translatable="false">get_others_by_service_id.php?service_id=%1$s</string>
    <string name="GET_REPLIES_BY_REVIEW_ID_URL" translatable="false">get_replies.php?review_id=%1$d</string>
    <string name="GET_REVIEW_BY_KEY_URL" translatable="false">get_review_by_key.php?key=%1$d</string>
    <string name="GET_REVIEW_BY_SERVICE_ID_URL" translatable="false">get_review_by_service_id.php?id=%1$d</string>
    <string name="GET_SERVICE_BY_SERVICE_ID_URL" translatable="false">get_service_by_service_id.php?service_id=%1$s</string>
    <string name="GET_SERVICE_LIST_URL" translatable="false">get_service_list.php?keyword=%1$s&amp;type=%2$s</string>
    <string name="GET_USER_BY_UID_URL" translatable="false">get_user_by_uid.php?uid=%1$s</string>
    <string name="IS_USER_EXISTS_URL" translatable="false">is_user_exists.php?status=0&amp;uid=%1$s</string>
    <string name="LIKE_CONDITION_URL" translatable="false">like_condition.php?service_id=%1$d&amp;uid=%2$s</string>
    <string name="LIKES_COUNT_URL" translatable="false">likes_count.php?service_id=%1$d</string>
    <string name="POST_REPLY_URL" translatable="false">post_reply.php?review_id=%1$d&amp;text=%2$s&amp;img=%3$s</string>
    <string name="POST_REVIEW_URL" translatable="false">post_review.php?service_id=%1$d&amp;uid=%2$s&amp;text=%3$s&amp;img=%4$s</string>
    <string name="REVIEWS_COUNT_URL" translatable="false">reviews_count.php?service_id=%1$d</string>
    <string name="logo_bucket" translatable="false">../EasyPetsWeb/bucket/logo/</string>
    <string name="reply_bucket" translatable="false">../EasyPetsWeb/bucket/replyPictures/</string>
    <string name="review_bucket" translatable="false">../EasyPetsWeb/bucket/reviewPictures/</string>
    <string name="pictures_bucket" translatable="false">../EasyPetsWeb/bucket/picture/</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="google_login_failed">Google login failed.</string>
    <string name="launch_google_maps">Launching Google Maps</string>
    <string name="message_fill_review">Please fill the review form</string>
    <string name="post_success">Post Successful</string>
    <string name="post_failed">Post failed</string>
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="search_hint">Search</string>
    <string name="min_price">preferred min price</string>
    <string name="max_price">preferred max price</string>
    <string name="pet_deposit">Pet deposit</string>
    <string name="loading">loading</string>
    <string name="next_open_on">opens on</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="logout">Logout</string>
    <string name="filter_button">Filter and Sort</string>
    <string name="search">Search</string>
    <string name="clear">clear</string>
    <string name="signing_in">Signing in</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="price_rate_label">Price rate %1$s</string>
    <string name="info">info</string>
    <string name="review">review</string>
    <string name="reviews">%1$s Reviews</string>
    <string name="open_maps">Location</string>
    <string name="zero_results">Zero results</string>
    <string name="rate_symbol">$</string>
    <string name="rate_symbol_double">$$</string>
    <string name="rate_symbol_triple">$$$</string>
    <string name="all_day_open">24 hours</string>
    <string name="time_open_label">%1$s - %2$s</string>
    <string name="review_no_review">No reviews yet</string>
    <string name="replies">Replies</string>
    <string name="no_replies">There is no replies</string>
    <string name="distance_label" translatable="false">%1$sm</string>
    <string name="opening">Opening</string>
    <string name="price_rate_range">Preferred Price Rate</string>
    <string name="sort">sort by</string>
    <string name="search_for">Search for: "%1$s"</string>
    <string name="click_for_reset">(click for reset)</string>
    <string name="add_a_photo">add a photo</string>
    <string name="post">post</string>
    <string name="deposit_available">deposit available</string>
    <string name="deposit_unavailable">deposit unavailable</string>
    <string name="accept_overnight">accept overnight</string>
    <string name="special_pets_acceptance">Special pets acceptance</string>
    <string name="none">none</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="groom_start_price_label">Groom starting price</string>
    <string name="vaccine_start_price_label">Vaccine starting price</string>
    <string name="operation_start_price_label">Operation starting price</string>
    <string name="checkup_start_price_label">Checkup starting price</string>
    <string name="hotel_start_price_label">Hotel starting price</string>
    <string name="other_start_price_label">Price</string>
    <string name="hospital_heading">Pet Hospital Details</string>
    <string name="groom_heading">Groom Details</string>
    <string name="hotel_heading">Hotel Details</string>
    <string name="operation_acceptance">serious operation</string>
    <string name="overnight_acceptance">accept overnight</string>
    <string name="prefix_not">"not "</string>
    <string name="details_button">services details</string>
    <string name="vary">Vary by products</string>
    <string name="change">change</string>
    <string name="filter_label">Filter</string>
    <string name="checkup_price">Checkup price</string>
    <string name="price">Price</string>
    <string name="vaccine_price">Vaccine price</string>
    <string name="operation_price">Operation price</string>
    <string name="accept_operation">accept serious operation</string>
    <string name="mock_store_title">Service name</string>
    <string name="mock_address" translatable="false">221B Baker St, Marylebone, London</string>
    <string name="mock_time" translatable="false">09:00 - 20:00</string>
    <string name="mock_tel" translatable="false">0632724678</string>
    <string name="mock_likes_quantity" translatable="false">592</string>
    <string name="mock_description" translatable="false">Duis sed tempus tortor. Integer commodo quis metus a maximus. Duis a laoreet urna. Nam ut nisi rhoncus, vestibulum elit at, euismod neque. Mauris posuere leo ipsum, nec scelerisque erat scelerisque ac.</string>
    <string name="mock_available">Available for dog, cat</string>
    <string name="mock_is_depositable" translatable="false">available</string>
    <string name="icon_storage_ref" translatable="false">StoreLogo/</string>
    <string name="reply_images_storage_ref" translatable="false">ReplyImages/</string>
    <string name="review_images_storage_ref" translatable="false">ReviewImages/</string>
    <string name="pictures_storage_ref" translatable="false">StorePictures/</string>
    <string name="lizard">lizard</string>
    <string name="pig">pig</string>
    <string name="snake">snake</string>
    <string name="fennec_fox" translatable="false">fennec fox</string>
    <string-array name="type_list">
        <item>Pet Service</item>
        <item>Pet Hospital</item>
        <item>I\'m looking for</item>
    </string-array>
    <string-array name="image_chooser_options">
        <item>Choose from album</item>
        <item>Take a photo</item>
    </string-array>
    <string name="is_accept_overnight" translatable="false">is_accept_overnight</string>
    <string name="hotel_price" translatable="false">hotel_price</string>
    <string name="model_name_service" translatable="false">service</string>
    <string name="service_id" translatable="false">service_id</string>
    <string name="owner_uid" translatable="false">owner_uid</string>
    <string name="name" translatable="false">name</string>
    <string name="logo_path" translatable="false">logo_path</string>
    <string name="picture_path" translatable="false">picture_path</string>
    <string name="type" translatable="false">type</string>
    <string name="open_days" translatable="false">open_days</string>
    <string name="open_time" translatable="false">open_time</string>
    <string name="close_time" translatable="false">close_time</string>
    <string name="tel" translatable="false">tel</string>
    <string name="address" translatable="false">address</string>
    <string name="likes_count" translatable="false">likes_count</string>
    <string name="latitude" translatable="false">latitude</string>
    <string name="longitude" translatable="false">longitude</string>
    <string name="description" translatable="false">description</string>
    <string name="pet_name" translatable="false">pet_name</string>
    <string name="facebook_url" translatable="false">facebook_url</string>
</resources>