<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/group_img"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgView_store"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgView_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:gravity="start|bottom" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/group_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_img">

            <TextView
                android:id="@+id/store_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_available"
                android:textColor="@color/text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_default_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_img">

            <TextView
                android:id="@+id/store_like_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/my_default_margin"
                android:text="@string/mock_likes_quantity"
                android:textColor="@color/text" />

            <ImageView
                android:id="@+id/imageview_store_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/my_default_margin"
                android:src="@drawable/dog_paw"
                android:tint="@color/icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_time_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_available">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/my_default_margin"
                android:src="@drawable/ic_schedule_black_24dp"
                android:tint="@color/icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/store_open_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/my_default_margin"
                        android:text="@string/SUN"
                        android:textColor="@color/text" />

                    <TextView

                        android:id="@+id/store_open_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/my_default_margin"
                        android:text="@string/MON"
                        android:textColor="@color/text" />

                    <TextView
                        android:id="@+id/store_open_tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/my_default_margin"
                        android:text="@string/TUE"
                        android:textColor="@color/text" />

                    <TextView
                        android:id="@+id/store_open_wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/my_default_margin"
                        android:text="@string/WED"
                        android:textColor="@color/text" />

                    <TextView
                        android:id="@+id/store_open_thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/my_default_margin"
                        android:text="@string/THU"
                        android:textColor="@color/text" />

                    <TextView
                        android:id="@+id/store_open_friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/my_default_margin"
                        android:text="@string/FRI"
                        android:textColor="@color/text" />

                    <TextView
                        android:id="@+id/store_open_saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SAT"
                        android:textColor="@color/text" />

                </LinearLayout>

                <TextView
                    android:id="@+id/store_time_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mock_time"
                    android:textColor="@color/text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_time_open">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/my_default_margin"
                android:src="@drawable/ic_call_black_24dp"
                android:tint="@color/icon" />

            <TextView
                android:id="@+id/store_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_tel"
                android:textColor="@color/text" />

        </LinearLayout>

        <View
            android:id="@+id/separator_store_layout1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/my_default_margin"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_tel" />

        <TextView
            android:id="@+id/store_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_default_margin"
            android:singleLine="false"
            android:text="@string/mock_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_store_layout1" />

        <View
            android:id="@+id/separator_store_layout2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/my_default_margin"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@id/store_open_map_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/store_desc" />

        <RelativeLayout
            android:id="@+id/store_open_map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_default_margin"
            android:background="@color/colorPrimaryDim"
            android:padding="@dimen/my_default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_store_layout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/open_maps" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_chevron_right_black_24dp" />

        </RelativeLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>