<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <View
        android:id="@+id/filterDialog_topMargin"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintBottom_toTopOf="@id/reset_filter_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/toggle_button_toggled"
        android:text="@string/clear"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/filter_is_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterDialog_topMargin" />

    <Switch
        android:id="@+id/filter_is_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/opening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_filter_button" />

    <TextView
        android:id="@+id/priceRate_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/price_rate_range"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_is_open" />

    <LinearLayout
        android:id="@+id/group_price_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceRate_label">

        <ToggleButton
            android:id="@+id/lowPriceRate_toggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:textColor="@color/colorAccent"
            android:textOff="@string/rate_symbol"
            android:textOn="@string/rate_symbol" />

        <ToggleButton
            android:id="@+id/midPriceRate_toggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:textColor="@color/colorAccent"
            android:textOff="@string/rate_symbol_double"
            android:textOn="@string/rate_symbol_double" />

        <ToggleButton
            android:id="@+id/highPriceRate_toggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:textColor="@color/colorAccent"
            android:textOff="@string/rate_symbol_triple"
            android:textOn="@string/rate_symbol_triple" />

    </LinearLayout>

    <Button
        android:id="@+id/search_filter_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/toggle_button_toggled"
        android:text="@android:string/ok"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_price_rate"
        app:layout_constraintVertical_bias="0.084" />

</android.support.constraint.ConstraintLayout>
